some alignment fixes

--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,7 @@ body {
 
 .app {
   width: 100%;
-  min-height: 100vh;
+  height: 100svh;
   display: grid;
   grid-template-rows: auto auto 1fr auto;
 }
@@ -54,7 +54,6 @@ h1 {
 }
 
 h3 {
-  margin-right: 1.6rem;
   font-size: 2.4rem;
 }
 
@@ -126,6 +125,10 @@ input {
   }
   .form-container {
     margin-top: 1rem;
+    gap: 0.5rem;
+  }
+  .form-container input {
+    width: 18rem;
   }
 }
 
